kubectl/selenium-node-firefox-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: selenium-node-firefox
  labels:
    name: selenium-node-firefox
spec:
  selector:
    app: selenium-node-firefox
    browser: chrome
  ports:
    - name: nodeport
      protocol: TCP
      port: 5555
      targetPort: 5555
    - name: node-port-grid
      protocol: TCP
      port: 4444
      targetPort: 4444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-firefox-deployment
  labels:
    app: selenium-node-firefox
    name: selenium-node-firefox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-firefox
  template:
    metadata:
      labels:
        app: selenium-node-firefox
    spec:
      containers:
        - name: selenium-node-firefox
          image: selenium/node-firefox:latest
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 5555
              protocol: TCP
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir: { "medium": "Memory" }
