kubectl/selenium-hub-deployement-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: selenium-ingress
  annotations:
    nginx.ingress.kubernetes.io: /$1
spec:
  rules:
    - host: selenium-grid.elte
      http:
        paths:
          - path: /
            backend:
              serviceName: selenium-hub-deployment
              servicePort: 4444
